--- a/src/app/modules/exam/by-lab-id/editExam/editExam.component.html
+++ b/src/app/modules/exam/by-lab-id/editExam/editExam.component.html
@@ -5,6 +5,16 @@
             <input matInput name="doctor comments" [(ngModel)]="_exam.examinationDate" [disabled]=" true ">
         </mat-form-field>
 
+        <br>
+        <mat-label><input mat-raised-button color="primary" id="file" type="file" class="form-control" accept="image/*" (change)="onFileChange($event)"></mat-label>
+        <br>
+        <img #image [src]="_imageSrc" *ngIf="_imageSrc" style="height:30%; width:30%">
+        <div class="b">
+
+        </div>
+
+        <button mat-raised-button color="primary" matStepperNext (click)="saveExam()">save Exam</button>
+
     </form>
     <p>
         <!-- <mat-form-field appearance="fill ">
