--- a/src/app/modules/user/log-in/log-in.component.html
+++ b/src/app/modules/user/log-in/log-in.component.html
@@ -15,6 +15,7 @@
         <!-- Login Form -->
         <form [formGroup]="loginForm">
             <input type="text" id="login" class="fadeIn second" name="login" placeholder="user name" name="userName" formControlName="email" #id>
+            <mat-icon>account_circle</mat-icon>
 
             <!-- <input type="text" id="password" class="fadeIn third" name="login" > -->
 
