--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -3,6 +3,10 @@
     <input matInput (keyup)="applyFilter($event)" placeholder="user.ium" #input>
 </mat-form-field>
 
+
+
+
+
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
 
     <ng-container matColumnDef="index">
@@ -19,10 +23,16 @@
         <td mat-cell *matCellDef="let ele"> {{ele.userKindId}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="updateUser">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <br>
+        <button mat-raised-button color="" mat-cell *matCellDef="let ele" (click)="updateUser(ele)"> update user</button>
+    </ng-container>
+
     <ng-container matColumnDef="deleteUser">
         <th mat-header-cell *matHeaderCellDef></th>
         <br>
-        <button mat-raised-button color="" mat-cell *matCellDef="let ele" (click)="deleteUser(ele)"> delete user</button>
+        <button mat-raised-button color="warn" mat-cell *matCellDef="let ele" (click)="deleteUser(ele)"> delete user</button>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns "></tr>
