--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<router-outlet>
-</router-outlet>
+<div style="background-image: url(39530-pcrzxd.png); background-size: cover;background-repeat: no-repeat; ">
+    <router-outlet>
+
+    </router-outlet>
+
+</div>
