--- a/src/app/modules/user/log-in/log-in.component.html
+++ b/src/app/modules/user/log-in/log-in.component.html
@@ -3,7 +3,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 
-<div class="wrapper fadeInDown">
+<div style="background-image: url(39530-pcrzxd.png); background-size: cover;background-repeat: no-repeat; " class="wrapper fadeInDown">
     <div id="formContent">
         <!-- Tabs Titles -->
 
@@ -14,25 +14,25 @@
 
         <!-- Login Form -->
         <form [formGroup]="loginForm">
-            <input type="text" id="login" class="fadeIn second" name="login" placeholder="user name" name="userName" formControlName="email" #id>
+            <input type="text" id="login" class="fadeIn second" name="login" placeholder="שם משתמש" name="userName" formControlName="email" #id>
             <mat-icon>account_circle</mat-icon>
 
             <!-- <input type="text" id="password" class="fadeIn third" name="login" > -->
 
 
             <!-- <mat-label>Enter your password</mat-label> -->
-            <input id="password" class="fadeIn third" name="login" placeholder="password" formControlName="password" #password matInput [type]="hide ? 'password' : 'text'">
+            <input id="password" class="fadeIn third" name="login" placeholder="סיסמא" formControlName="password" #password matInput [type]="hide ? 'password' : 'text'">
             <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
         <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
       </button>
 
 
-            <input type="submit" class="fadeIn fourth" value="Log In" (click)="LogIn(id.value,password.value)">
+            <input type="submit" class="fadeIn fourth" value="היכנס" (click)="LogIn(id.value,password.value)">
         </form>
 
         <!-- Remind Passowrd -->
         <div id="formFooter">
-            <a class="underlineHover" href="pass">Forgot Password?</a>
+            <a class="underlineHover" href="pass">?שכחת סיסמא</a>
         </div>
 
     </div>
