--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div style="background-image: url(39530-pcrzxd.png); background-size: cover;background-repeat: no-repeat; ">
+<body style="background-image: url(img1.png); background-size: cover;background-repeat: no-repeat; ">
     <router-outlet>
 
     </router-outlet>
 
-</div>
+</body>
