--- a/src/app/modules/user/log-in/log-in.component.html
+++ b/src/app/modules/user/log-in/log-in.component.html
@@ -3,7 +3,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 
-<div style="background-image: url(39530-pcrzxd.png); background-size: cover;background-repeat: no-repeat; " class="wrapper fadeInDown">
+<div style="background-image: url(REKA.png); background-size: cover;background-repeat: no-repeat; " class="wrapper fadeInDown">
     <div id="formContent">
         <!-- Tabs Titles -->
 
