--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -1,44 +1,43 @@
-<mat-form-field appearance="fill">
-    <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="user.ium" #input>
-</mat-form-field>
+<body dir="rtl">
 
+    <mat-form-field appearance="fill">
+        <mat-label>Filter</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="user.ium" #input>
+    </mat-form-field>
 
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
 
+        <ng-container matColumnDef="index">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>No.</th>
+            <td mat-cell *matCellDef="let element; index as i"> {{i}} </td>
+        </ng-container>
 
+        <ng-container matColumnDef="userName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> שם משתמש</th>
+            <td mat-cell *matCellDef="let ele; index as i"> {{ele.firstName}} {{ele.lastName}} </td>
+        </ng-container>
+        <ng-container matColumnDef="userKindId">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>תפקיד </th>
+            <td mat-cell *matCellDef="let ele"> {{ele.userKindId}} </td>
+        </ng-container>
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+        <ng-container matColumnDef="updateUser">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <br>
+            <button mat-raised-button color="" mat-cell *matCellDef="let ele" (click)="updateUser(ele)"> עדכון פרטי משתמש</button>
+        </ng-container>
 
-    <ng-container matColumnDef="index">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>No.</th>
-        <td mat-cell *matCellDef="let element; index as i"> {{i}} </td>
-    </ng-container>
+        <ng-container matColumnDef="deleteUser">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <br>
+            <button mat-raised-button color="warn" mat-cell *matCellDef="let ele" (click)="deleteUser(ele)">מחיקת משתמש</button>
+        </ng-container>
 
-    <ng-container matColumnDef="userName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> user name</th>
-        <td mat-cell *matCellDef="let ele; index as i"> {{ele.firstName}} {{ele.lastName}} </td>
-    </ng-container>
-    <ng-container matColumnDef="userKindId">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>duty </th>
-        <td mat-cell *matCellDef="let ele"> {{ele.userKindId}} </td>
-    </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns "></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns; "></tr>
 
-    <ng-container matColumnDef="updateUser">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <br>
-        <button mat-raised-button color="" mat-cell *matCellDef="let ele" (click)="updateUser(ele)"> update user</button>
-    </ng-container>
+    </table>
 
-    <ng-container matColumnDef="deleteUser">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <br>
-        <button mat-raised-button color="warn" mat-cell *matCellDef="let ele" (click)="deleteUser(ele)"> delete user</button>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns "></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns; "></tr>
-
-</table>
-
-<br><br>
-<button mat-raised-button color="primary" (click)="openDialog() ">Add User</button>
+    <br><br>
+    <button mat-raised-button color="primary" (click)="openDialog() ">הוספת משתמש</button>
+</body>
