--- a/src/app/modules/exam/by-lab-id/by-lab-id.component.html
+++ b/src/app/modules/exam/by-lab-id/by-lab-id.component.html
@@ -1,82 +1,85 @@
-<mat-form-field appearance="fill">
-    <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex.ium" #input>
-</mat-form-field>
+<body dir="rtl">
+    <mat-form-field appearance="fill">
+        <mat-label>Filter</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex.ium" #input>
+    </mat-form-field>
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-    <!-- Position Column -->
-    <ng-container matColumnDef="index">
-        <th mat-header-cell *matHeaderCellDef> No. </th>
-        <td mat-cell *matCellDef="let element; index as i"> {{i}} </td>
-    </ng-container>
+        <!-- Position Column -->
+        <ng-container matColumnDef="index">
+            <th mat-header-cell *matHeaderCellDef> No. </th>
+            <td mat-cell *matCellDef="let element; index as i"> {{i}} </td>
+        </ng-container>
 
-    <!-- examDate Column -->
-    <ng-container matColumnDef="examDate">
-        <th mat-header-cell *matHeaderCellDef> examinationDate </th>
-        <td mat-cell *matCellDef="let element"> {{element.examinationDate}} </td>
-    </ng-container>
+        <!-- examDate Column -->
+        <ng-container matColumnDef="examDate">
+            <th mat-header-cell *matHeaderCellDef> תאריך הבדיקה</th>
+            <td mat-cell *matCellDef="let element"> {{element.examinationDate}} </td>
+        </ng-container>
 
-    <!-- doctorName Column -->
-    <ng-container matColumnDef="doctorName">
-        <th mat-header-cell *matHeaderCellDef> doctor name </th>
-        <td mat-cell *matCellDef="let element"> {{element.doctorName}} </td>
-    </ng-container>
+        <!-- doctorName Column -->
+        <ng-container matColumnDef="doctorName">
+            <th mat-header-cell *matHeaderCellDef> הרופא המפנה</th>
+            <td mat-cell *matCellDef="let element"> {{element.doctorName}} </td>
+        </ng-container>
 
-    <ng-container matColumnDef="doctorComments">
-        <th mat-header-cell *matHeaderCellDef> doctor comments</th>
-        <td mat-cell *matCellDef="let element"> {{element.doctorComments}} </td>
-    </ng-container>
+        <ng-container matColumnDef="doctorComments">
+            <th mat-header-cell *matHeaderCellDef> הערות הרופא</th>
+            <td mat-cell *matCellDef="let element"> {{element.doctorComments}} </td>
+        </ng-container>
 
-    <ng-container matColumnDef="edit">
-        <th mat-header-cell *matHeaderCellDef> edit </th>
+        <ng-container matColumnDef="edit">
+            <th mat-header-cell *matHeaderCellDef> edit </th>
 
-        <td mat-cell> <button mat-raised-button color="primary" *matCellDef="let element" (click)="editExam(element)">edit</button> </td>
-    </ng-container>
+            <td mat-cell> <button mat-raised-button color="primary" *matCellDef="let element" (click)="editExam(element)">עריכה</button> </td>
+        </ng-container>
 
-    <!-- computerDiagnosis Column
+        <!-- computerDiagnosis Column
     <ng-container matColumnDef="computerDiagnosis">
         <th mat-header-cell *matHeaderCellDef> computerDiagnosis </th>
         <td mat-cell *matCellDef="let element"> {{element.computerDiagnosis}} </td>
     </ng-container> -->
 
-    <!-- computerComments Column -->
-    <!-- <ng-container matColumnDef="computerComments">
+        <!-- computerComments Column -->
+        <!-- <ng-container matColumnDef="computerComments">
         <th mat-header-cell *matHeaderCellDef> computerComments </th>
         <td mat-cell *matCellDef="let element"> {{element.computerComments}} </td>
     </ng-container> -->
 
-    <!-- probability Column -->
-    <!-- <ng-container matColumnDef="probability">
+        <!-- probability Column -->
+        <!-- <ng-container matColumnDef="probability">
         <th mat-header-cell *matHeaderCellDef> probability </th>
         <td mat-cell *matCellDef="let element"> {{element.probability}} </td>
     </ng-container> -->
 
-    <!-- linkToPicture Column -->
-    <!-- <ng-container matColumnDef="linkToPicture">
+        <!-- linkToPicture Column -->
+        <!-- <ng-container matColumnDef="linkToPicture">
         <th mat-header-cell *matHeaderCellDef> linkToPicture </th>
         <td mat-cell *matCellDef="let element"> {{element.linkToPicture}} </td>
     </ng-container> -->
 
-    <ng-container matColumnDef="addPicture">
-        <th mat-header-cell *matHeaderCellDef> add picture </th>
-        <td mat-cell>
-            <button (click)="addFile()">upload picture</button>
-        </td>
-    </ng-container>
+        <ng-container matColumnDef="addPicture">
+            <th mat-header-cell *matHeaderCellDef> add picture </th>
+            <td mat-cell>
+                <button (click)="addFile()">upload picture</button>
+            </td>
+        </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-    <!-- Row shown when there is no matching data. -->
-    <!-- <tr class="mat-row" *matNoDataRow>
+        <!-- Row shown when there is no matching data. -->
+        <!-- <tr class="mat-row" *matNoDataRow>
       <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
     </tr> -->
-</table>
+    </table>
 
 
-<!-- Copyright 2022 Google LLC. All Rights Reserved.
+    <!-- Copyright 2022 Google LLC. All Rights Reserved.
       Use of this source code is governed by an MIT-style license that
       can be found in the LICENSE file at https://angular.io/license -->
 
-<!-- <button mat-raised-button color="primary" (click)="editExam()">edit</button> -->
+    <!-- <button mat-raised-button color="primary" (click)="editExam()">edit</button> -->
+
+</body>
