--- a/src/app/modules/exam/by-patient-id/by-patient-id.component.html
+++ b/src/app/modules/exam/by-patient-id/by-patient-id.component.html
@@ -11,7 +11,7 @@
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex.ium" #input>
 </mat-form-field> -->
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort dir="rtl">
 
     <ng-container matColumnDef="index">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
@@ -19,18 +19,18 @@
         <td mat-cell *matCellDef="let element; index as i"> {{i}} </td>
     </ng-container>
     <ng-container matColumnDef="examination date">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> examination date </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> תאריך הבדיקה</th>
         <td mat-cell *matCellDef="let element; index as i"> {{element.examinationDate}} </td>
     </ng-container>
 
     <ng-container matColumnDef="doctor id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> doctor id </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> הרופא המפנה </th>
         <td mat-cell *matCellDef="let element"> {{element.doctorId}} </td>
     </ng-container>
 
     <!-- Weight Column -->
     <ng-container matColumnDef="result">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> result </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> תוצאת הבדיקה </th>
         <td mat-cell *matCellDef="let element"> 123 </td>
     </ng-container>
 
