--- a/src/app/modules/user/add-patient/add-patient.component.html
+++ b/src/app/modules/user/add-patient/add-patient.component.html
@@ -1,20 +1,20 @@
 <!-- <p>add-patient works!</p> -->
-<div mat-dialog-content>
+<div mat-dialog-content dir="rtl">
     <form class="example-form" [formGroup]="form">
         <mat-icon color="primary">account_circle</mat-icon>
         <mat-form-field appearance="fill">
-            <mat-label>Select user</mat-label>
+            <mat-label>בחר משתמש</mat-label>
             <select matNativeControl formControlName="user" formControlName="user">
                 <option *ngFor="let user of users" [value]="user.id" selected>
                     {{user.firstName+ " "+ user.lastName}}
                 </option>
                 </select>
         </mat-form-field>
-        <button mat-raised-button color="primary" (click)="addUser()">add user</button>
+        <button mat-raised-button color="primary" (click)="addUser()">הוספת משתמש</button>
         <br>
 
         <mat-form-field appearance="fill" class="example-form-field">
-            <mat-label>Choose a date</mat-label>
+            <mat-label>תאריך לידה</mat-label>
             <input matInput [matDatepicker]="datepicker" formControlName="birthDate">
             <mat-hint>MM/DD/YYYY</mat-hint>
             <mat-datepicker-toggle matSuffix [for]="datepicker"></mat-datepicker-toggle>
@@ -31,7 +31,7 @@
 
 
         <mat-form-field appearance="fill">
-            <mat-label>Select HMO</mat-label>
+            <mat-label>קופת חולים</mat-label>
             <select matNativeControl [value]="selected" formControlName="HMOId" name="patient">
                   <option
                   *ngFor="let hmo1 of hmos"
@@ -42,8 +42,8 @@
         </mat-form-field>
         <br>
         <div mat-dialog-actions>
-            <button mat-raised-button mat-dialog-close (click)="onNoClick()" cdkFocusInitial>No Thanks</button>
-            <button mat-raised-button color="primary" (click)="add_patient()">Save Patient</button>
+            <button mat-raised-button mat-dialog-close (click)="onNoClick()" cdkFocusInitial>לא תודה</button>
+            <button mat-raised-button color="primary" (click)="add_patient()">הוספת פציינט</button>
         </div>
     </form>
 
