--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<body style="background-image: url(img1.png); background-size: cover;background-repeat: no-repeat; ">
+<div style="background-image: url(img1.png); background-size: cover;background-repeat: no-repeat; ">
     <router-outlet>
 
     </router-outlet>
 
-</body>
+</div>
